[package]
name = "cargo-hdk"
version = "0.2.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Cargo subcommand for building Houdini plugins."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/elrnv/cargo-hdk"
repository = "https://github.com/elrnv/cargo-hdk"
homepage = "https://github.com/elrnv/cargo-hdk"
readme = "README.md"
keywords = ["Houdini", "HDK", "plugin"]

[dependencies]
structopt = "0.3"
terminal_size = "0.1"
clap-verbosity-flag = "0.3"
log = "0.4"
env_logger = "0.7"
anyhow = "1"
colored = "1"

[dev-dependencies]
assert_cmd = "0.12"
