[package]
name = "cargo-hdk"
version = "0.2.6"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Cargo subcommand for building Houdini plugins."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/elrnv/cargo-hdk"
repository = "https://github.com/elrnv/cargo-hdk"
homepage = "https://github.com/elrnv/cargo-hdk"
readme = "README.md"
keywords = ["Houdini", "HDK", "plugin"]

[dependencies]
clap = "3"
terminal_size = "0.2"
clap-verbosity-flag = "1"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
colored = "2"
cargo_metadata = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
